apps/wger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger
  namespace: wger
spec:
  type: LoadBalancer
  selector:
    app: wger
  ports:
    - port: 80
      targetPort: 8000
