apps/wger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wger-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: public
  tls:
    - secretName: orriborri-com-tls
      hosts:
        - ${WGER_DOMAIN_NAME}
  rules:
    - host: ${WGER_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wger
                port:
                  number: 80
